--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Demo",
+  "name": "33ARCADE",
   "version": "1.0.0",
-  "productName": "Demo",
+  "productName": "33ARCADE",
   "description": "Modded Minecraft Launcher",
   "author": "babybear(https://github.com/BabyBear7/launcher-demo)",
   "license": "UNLICENSED",
